syntax = "proto2";

package api;

option go_package = "proto/";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


service API {
  rpc Stream(stream ClientCommand) returns (google.protobuf.Empty);
  rpc HealthCheck(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message ClientCommand {
  oneof cmd {
    RawEvents Events = 3;
  }
}

message RawEvents {
  required string  WorkerID = 1;
  repeated RawEvent Events = 2;
}

enum EventKind {
    EventKindStageStarted = 0;
    EventKindStageFinished = 1;
    EventKindGenericUpdate =2;
}

enum EventStatus {
    EventStatusUnknown = 0;
    EventStatusSuccess = 1;
    EventStatusFailure = 2;
}

message RawEvent {
  required string ProcessID = 2;
  required string ExecutionID = 3;
  required string StageExecutionID = 1;

  required RawStage Stage = 4;
  required google.protobuf.Timestamp Ts = 5;
  required EventKind Kind = 6;
  required EventStatus Status = 7;

  optional bytes Input = 8;
  optional bytes Output = 9;
  optional bytes Failure = 10;
  optional bytes Metadata = 11;
}

message RawStage {
    required string Name = 1;
    required string Description = 2;
}
